--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -2,15 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href={% static "global/css/styles.css" %}>
-  <title>Document</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href={% static "global/css/styles.css" %}>
+    <title>Document</title>
+  </head>
 
-<body>
-  <h1>INDEX</h1>
-</body>
+  <body>
+    <main class="content">
+      {% block content %}{% endblock content %}
+    </main>
+  </body>
 
 </html>
