--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -10,6 +10,39 @@
   </head>
 
   <body>
+    <header class="header">
+      <h1 class="header-heading">
+        <a href="{% url 'poll:index' %}" class="header-link">
+          Legislativas 2024
+        </a>
+      </h1>
+  
+      <nav class="menu">
+        <ul class="menu-list">
+  
+          {% if user.is_authenticated %}
+            <li class="menu-item">
+              <a href="/" class="menu-link">Votar</a>
+            </li>
+            <li class="menu-item">
+              <a href="/" class="menu-link">Perfil</a>
+            </li>
+            <li class="menu-item">
+              <a href="/" class="menu-link">Sair</a>
+            </li>
+          {% else %}
+            <li class="menu-item">
+              <a href="/" class="menu-link">Entrar</a>
+            </li>
+            <li class="menu-item">
+              <a href="/" class="menu-link">Registar</a>
+            </li>
+          {% endif %}
+  
+        </ul>
+      </nav>
+    </header>
+
     <main class="content">
       {% block content %}{% endblock content %}
     </main>
